# HomeWork

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  Doxyfile-mcss  README.md  appveyor.yml  compile_commands.json
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  SetCXXStandard.cmake
docs/: Doxyfile  README-Romana.md  README.md  annotated.html  classdummy__api_1_1Circle-members.html  classdummy__api_1_1Circle.html  classdummy__api_1_1Line.html  classdummy__api_1_1OutlineCircle.html  classdummy__api_1_1OutlineRectangle.html  classdummy__api_1_1OutlineTriangle-members.html  classdummy__api_1_1OutlineTriangle.html  classdummy__api_1_1Point-members.html  classdummy__api_1_1Rectangle.html  classdummy__api_1_1Shape-members.html  classdummy__api_1_1Shape.html  classdummy__api_1_1Triangle-members.html  classhw_1_1window.html  color_8hpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  drawing__api_8cpp.html  drawing__api_8hpp.html  drawing__api_8hpp_source.html  files.html  functions.html  functions_func.html  globals_defs.html  globals_func.html  graphics_8hpp_source.html  hierarchy.html  hwapi_8cpp.html  hwapi_8hpp.html  hwapi_8hpp_source.html  index.html  keys_8hpp.html  keys_8hpp_source.html  modules.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  structhw_1_1vec2.html  (+3 more)
docs/html/: annotated.html  classdummy__api_1_1Circle-members.html  classdummy__api_1_1Circle.html  classdummy__api_1_1Line-members.html  classdummy__api_1_1Line.html  classdummy__api_1_1OutlineCircle-members.html  classdummy__api_1_1OutlineCircle.html  classdummy__api_1_1OutlineRectangle-members.html  classdummy__api_1_1OutlineRectangle.html  classdummy__api_1_1OutlineTriangle-members.html  classdummy__api_1_1OutlineTriangle.html  classdummy__api_1_1Point-members.html  classdummy__api_1_1Point.html  classdummy__api_1_1Rectangle-members.html  classdummy__api_1_1Rectangle.html  classdummy__api_1_1Shape-members.html  classdummy__api_1_1Shape.html  classdummy__api_1_1Triangle-members.html  classdummy__api_1_1Triangle.html  classes.html  classhw_1_1window-members.html  classhw_1_1window.html  color_8hpp.html  color_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  hwapi_8cpp.html  hwapi_8hpp.html  hwapi_8hpp_source.html  index.html  menudata.js  namespacedummy__api.html  namespacehw.html  namespacehw_1_1renderer.html  (+17 more)
docs/latex/: annotated.tex  classdummy__api_1_1Circle.eps  classdummy__api_1_1Circle.tex  classdummy__api_1_1Line.eps  classdummy__api_1_1Line.tex  classdummy__api_1_1OutlineCircle.eps  classdummy__api_1_1OutlineCircle.tex  classdummy__api_1_1OutlineRectangle.eps  classdummy__api_1_1OutlineRectangle.tex  classdummy__api_1_1OutlineTriangle.eps  classdummy__api_1_1OutlineTriangle.tex  classdummy__api_1_1Point.eps  classdummy__api_1_1Point.tex  classdummy__api_1_1Rectangle.eps  classdummy__api_1_1Rectangle.tex  classdummy__api_1_1Shape.eps  classdummy__api_1_1Shape.tex  classdummy__api_1_1Triangle.eps  classdummy__api_1_1Triangle.tex  classhw_1_1window.tex  color_8hpp.tex  files.tex  hierarchy.tex  hwapi_8cpp.tex  hwapi_8hpp.tex  namespacedummy__api.tex  namespacehw.tex  namespacehw_1_1renderer.tex  namespaces.tex  refman.tex  renderer_8hpp.tex  structhw_1_1color.tex  structhw_1_1vec2.tex  vec2_8hpp.tex  (+2 more)
html/: annotated.html  classdummy__api_1_1Circle-members.html  classdummy__api_1_1Circle.html  classdummy__api_1_1Image-members.html  classdummy__api_1_1Image.html  classdummy__api_1_1Line-members.html  classdummy__api_1_1Line.html  classdummy__api_1_1OutlineCircle-members.html  classdummy__api_1_1OutlineCircle.html  classdummy__api_1_1OutlineRectangle-members.html  classdummy__api_1_1OutlineRectangle.html  classdummy__api_1_1OutlineTriangle-members.html  classdummy__api_1_1OutlineTriangle.html  classdummy__api_1_1Point-members.html  classdummy__api_1_1Point.html  classdummy__api_1_1Rectangle-members.html  classdummy__api_1_1Rectangle.html  classdummy__api_1_1Shape-members.html  classdummy__api_1_1Shape.html  classdummy__api_1_1Triangle-members.html  classdummy__api_1_1Triangle.html  classes.html  classhw_1_1window-members.html  classhw_1_1window.html  color_8cpp.html  color_8hpp.html  color_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  drawing__api_8hpp.html  drawing__api_8hpp_source.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graphics_8hpp.html  graphics_8hpp_source.html  group__dummy__api__group.html  (+28 more)
include/: color.hpp  drawing_api.hpp  graphics.hpp  hwapi.hpp  keys.hpp  vec2.hpp  window.hpp
scripts/: build.bat  build.sh  common.py  run-clang-tidy.py  run_clang_format.py  run_clang_tidy.py
src/: color.cpp  drawing_api.cpp  hwapi.cpp  vec2.cpp  window.cpp
tests/: CMakeLists.txt  background.cpp  basic_example.cpp  change_window_size.cpp  circle.cpp  circle2.cpp  circle3.cpp  hide.cpp  image.cpp  image_norect.cpp  image_rect_hide.cpp  image_switch.cpp  keyboard_test.cpp  keyboard_test2.cpp  line.cpp  line2.cpp  mixed.cpp  mouse.cpp  outcircle.cpp  outcircle2.cpp  outrect.cpp  outtriangle.cpp  point.cpp  rect.cpp  rect2.cpp  rect_move.cpp  triangle.cpp  triangle2.cpp  triangle_test.cpp
xml/: classdummy__api_1_1Circle.xml  classdummy__api_1_1Line.xml  classdummy__api_1_1OutlineCircle.xml  classdummy__api_1_1OutlineRectangle.xml  classdummy__api_1_1OutlineTriangle.xml  classdummy__api_1_1Point.xml  classdummy__api_1_1Rectangle.xml  classdummy__api_1_1Shape.xml  classdummy__api_1_1Triangle.xml  classhw_1_1window.xml  color_8cpp.xml  color_8hpp.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  graphics_8hpp.xml  hwapi_8cpp.xml  hwapi_8hpp.xml  index.xml  indexpage.xml  keys_8hpp.xml  namespace_0D7.xml  namespacedummy__api.xml  namespacehw.xml  structhw_1_1color.xml  structhw_1_1vec2.xml  vec2_8cpp.xml  vec2_8hpp.xml  window_8cpp.xml  window_8hpp.xml
(+75 files in other folders)
